--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title> 
 <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
-<link href="https://saulomlcosta.github.io/AnimatedForm/style.css" rel="stylesheet" />
+<link href="https://saulomlcosta.github.io/AnimatedForm1/style.css" rel="stylesheet" />
 </head>
 <body>
   <div class= "mainpage">
